--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.msukmanowsky</groupId>
-  <artifactId>OmnitureDataFileInputFormat</artifactId>
-  <packaging>jar</packaging>
-  <version>1.1.0</version>
-  <name>OmnitureDataFileInputFormat</name>
-  <description>
+	<groupId>com.github.msukmanowsky</groupId>
+	<artifactId>OmnitureDataFileInputFormat</artifactId>
+	<packaging>jar</packaging>
+	<version>1.1.0</version>
+	<name>OmnitureDataFileInputFormat</name>
+	<description>
 
   </description>
-  <url>https://github.com/msukmanowsky/OmnitureDataFileInputFormat</url>
+	<url>https://github.com/msukmanowsky/OmnitureDataFileInputFormat</url>
 
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
-  
-  <dependencies>
-<dependency>
-	<groupId>org.apache.hadoop</groupId>
-	<artifactId>hadoop-core</artifactId>
-	<version>1.0.0</version>
-</dependency>
-            
-     
-  </dependencies> 
+
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+
+
+	</dependencies>
+
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<artifactSet>
+								<includes>
+									<include>org.apache.commons:commons-compress</include>
+								</includes>
+							</artifactSet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
